final commit message

--- a/user/templates/user/bookinghistory.html
+++ b/user/templates/user/bookinghistory.html
@@ -85,7 +85,7 @@ body {
 
             <a href="{% url 'train_history' %}" class="btn btn-primary btn-lg m-2">View Train Bookings</a>
             <a href="{% url 'taxi_booking_history' %}" class="btn btn-primary btn-lg m-2">View Taxi Bookings</a>
-            <a href="{% url 'hoteldetails' %}" class="btn btn-primary btn-lg m-2">View Hotel Bookings</a>
+            <a href="{% url 'hotel_history' %}" class="btn btn-primary btn-lg m-2">View Hotel Bookings</a>
             <a href="{% url 'profile'%}" class="btn btn-primary btn-lg m-2">Back To Profile</a>
         </div>
     </div>
