--- a/user/templates/user/cancel.html
+++ b/user/templates/user/cancel.html
@@ -69,7 +69,7 @@
 
         <a href="{% url 'cancel_by_id_view' %}" class="option-button">Cancel Train Bookings</a>
         <a href="{% url 'taxi_booking_history' %}" class="option-button">Cancel Taxi Bookings</a>
-        <a href="{% url 'hoteldetails' %}" class="option-button">Cancel Hotel Bookings</a>
+        <a href="{% url 'hotel_history' %}" class="option-button">Cancel Hotel Bookings</a>
         <a href="{% url 'profile' %}" class="option-button">Back to Profile</a>
 
     </div>
