--- a/user/templates/user/train_history.html
+++ b/user/templates/user/train_history.html
@@ -126,7 +126,7 @@
         .status-approved { background-color: darkgreen; color: white; }
         .status-cancelled { background-color: #dc3545; color: white; }
         .status-refund { background-color: yellowgreen; color: white; }
-        .status-used { background-color: #343a40; color: white; }
+        .status-expired { background-color: #343a40; color: white; }
 
         .alert {
             padding: 15px;
